fixed cart controller and changes on checkout flow
